<resources>
    <string name="app_name">barcodetest</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">create_a_new_account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="Loginhere">Loginhere</string>
    <string name="email">email</string>
    <string name="fullname">fullname</string>
    <string name="check_shopping_record">check shopping record</string>
    <string name="scan_qrcode">scan QRcode</string>
    <string name="_123">123</string>
    <string name="product4">product4</string>
    <string name="product3">product3</string>
    <string name="product2">product2</string>
    <string name="product1">product1</string>
    <string name="number">number</string>
    <string name="sum">sum</string>

    <string name="barcode_text">Barcode Text</string>

    <string name="button">Button</string>

    <string name="textview">TextView</string>

    <string name="total">total:</string>
    <string name="checkout">checkout</string>
    <string name="back">back</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="scan_qr_code">Scan QR Code</string>


</resources>